[tool.poetry]
name = "gpx"
version = "0.1.0"
description = ""
authors = ["Mikołaj Badyl <contact@hawier.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpxpy = "^1.5.0"
laspy = {extras = ["laszip", "lazrs"], version = "^2.3.0"}
open3d = "^0.16.0"
pyproj = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
